增加修改密码功能

--- a/res/layout/myinfo.xml
+++ b/res/layout/myinfo.xml
@@ -2,18 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layoutBackground"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <include layout="@layout/include_titleview" />
 
     <LinearLayout
-        android:id="@+id/login_edit_changehead"
+        android:id="@+id/myinfo_changehead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/selector_item"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp" >
@@ -34,7 +35,7 @@
             android:hint="点击头像图标更换头像" />
 
         <ImageView
-            android:id="@+id/login_edit_head"
+            android:id="@+id/myinfo_head"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="0"
@@ -71,7 +72,7 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/login_edit_email"
+                android:id="@+id/myinfo_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -102,7 +103,7 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/login_edit_name"
+                android:id="@+id/myinfo_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -115,8 +116,23 @@
             android:layout_height="0.25dp"
             android:background="@drawable/base_horization_line" />
 
+        <TextView
+            android:id="@+id/myinfo_changepw"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:background="@drawable/selector_item"
+            android:gravity="center_vertical"
+            android:text="修改密码"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.25dp"
+            android:background="@drawable/base_horization_line" />
+
         <Button
-            android:id="@+id/login_edit_exit"
+            android:id="@+id/myinfo_exit"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
             android:layout_marginTop="5dp"
